# Platformer

./: CMakeLists.txt  CNAME  CopyAssets.bat  Platformer.cbp  Platformer.depend  Platformer.layout  index.html  params.json
include/: AnimatedSprite.h  Game.h  Graphics.h  Input.h  Player.h  Sprite.h  globals.h
src/: AnimatedSprite.cpp  Game.cpp  Graphics.cpp  Input.cpp  Player.cpp  Sprite.cpp  main.cpp
