cmake_minimum_required(VERSION 3.3)
project(Platformer)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    assets/sprites/MyChar.png
    deps/bin/libjpeg-9.dll
    deps/bin/libpng16-16.dll
    deps/bin/libtiff-5.dll
    deps/bin/libwebp-4.dll
    deps/bin/LICENSE.jpeg.txt
    deps/bin/LICENSE.png.txt
    deps/bin/LICENSE.tiff.txt
    deps/bin/LICENSE.webp.txt
    deps/bin/LICENSE.zlib.txt
    deps/bin/sdl2-config
    deps/bin/SDL2.dll
    deps/bin/SDL2_image.dll
    deps/bin/zlib1.dll
    deps/include/SDL2/begin_code.h
    deps/include/SDL2/close_code.h
    deps/include/SDL2/SDL.h
    deps/include/SDL2/SDL_assert.h
    deps/include/SDL2/SDL_atomic.h
    deps/include/SDL2/SDL_audio.h
    deps/include/SDL2/SDL_bits.h
    deps/include/SDL2/SDL_blendmode.h
    deps/include/SDL2/SDL_clipboard.h
    deps/include/SDL2/SDL_config.h
    deps/include/SDL2/SDL_cpuinfo.h
    deps/include/SDL2/SDL_endian.h
    deps/include/SDL2/SDL_error.h
    deps/include/SDL2/SDL_events.h
    deps/include/SDL2/SDL_filesystem.h
    deps/include/SDL2/SDL_gamecontroller.h
    deps/include/SDL2/SDL_gesture.h
    deps/include/SDL2/SDL_haptic.h
    deps/include/SDL2/SDL_hints.h
    deps/include/SDL2/SDL_image.h
    deps/include/SDL2/SDL_joystick.h
    deps/include/SDL2/SDL_keyboard.h
    deps/include/SDL2/SDL_keycode.h
    deps/include/SDL2/SDL_loadso.h
    deps/include/SDL2/SDL_log.h
    deps/include/SDL2/SDL_main.h
    deps/include/SDL2/SDL_messagebox.h
    deps/include/SDL2/SDL_mouse.h
    deps/include/SDL2/SDL_mutex.h
    deps/include/SDL2/SDL_name.h
    deps/include/SDL2/SDL_opengl.h
    deps/include/SDL2/SDL_opengles.h
    deps/include/SDL2/SDL_opengles2.h
    deps/include/SDL2/SDL_pixels.h
    deps/include/SDL2/SDL_platform.h
    deps/include/SDL2/SDL_power.h
    deps/include/SDL2/SDL_quit.h
    deps/include/SDL2/SDL_rect.h
    deps/include/SDL2/SDL_render.h
    deps/include/SDL2/SDL_revision.h
    deps/include/SDL2/SDL_rwops.h
    deps/include/SDL2/SDL_scancode.h
    deps/include/SDL2/SDL_shape.h
    deps/include/SDL2/SDL_stdinc.h
    deps/include/SDL2/SDL_surface.h
    deps/include/SDL2/SDL_system.h
    deps/include/SDL2/SDL_syswm.h
    deps/include/SDL2/SDL_test.h
    deps/include/SDL2/SDL_test_assert.h
    deps/include/SDL2/SDL_test_common.h
    deps/include/SDL2/SDL_test_compare.h
    deps/include/SDL2/SDL_test_crc32.h
    deps/include/SDL2/SDL_test_font.h
    deps/include/SDL2/SDL_test_fuzzer.h
    deps/include/SDL2/SDL_test_harness.h
    deps/include/SDL2/SDL_test_images.h
    deps/include/SDL2/SDL_test_log.h
    deps/include/SDL2/SDL_test_md5.h
    deps/include/SDL2/SDL_test_random.h
    deps/include/SDL2/SDL_thread.h
    deps/include/SDL2/SDL_timer.h
    deps/include/SDL2/SDL_touch.h
    deps/include/SDL2/SDL_types.h
    deps/include/SDL2/SDL_version.h
    deps/include/SDL2/SDL_video.h
    deps/lib/pkgconfig/sdl2.pc
    deps/lib/pkgconfig/SDL2_image.pc
    deps/lib/libSDL2.a
    deps/lib/libSDL2.dll.a
    deps/lib/libSDL2.la
    deps/lib/libSDL2_image.a
    deps/lib/libSDL2_image.dll.a
    deps/lib/libSDL2_image.la
    deps/lib/libSDL2_test.a
    deps/lib/libSDL2main.a
    deps/share/aclocal/sdl2.m4
    include/AnimatedSprite.h
    include/Game.h
    include/globals.h
    include/Graphics.h
    include/Input.h
    include/Sprite.h
    src/AnimatedSprite.cpp
    src/Game.cpp
    src/Graphics.cpp
    src/Input.cpp
    src/main.cpp
    src/Sprite.cpp)

add_executable(Platformer ${SOURCE_FILES})